# IU-Exploratory-Data-Analysis-and-Visualization-DLBDSEDAV01

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/meta/: data_dictionary.csv
data/processed/: germany_trade_data.csv
notebook/: analysis.ipynb
