[project]
name = "eda-project"
version = "0.1.0"
description = "IU Exploratory Data Analysis and Visualization (DLBDSEDAV01) Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "nbformat>=5.10.4",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scipy>=1.16.2",
    "statsmodels>=0.14.5",
]
